fixed images not showing

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -357,31 +357,31 @@ nav a:active:hover, .active:hover {
 
 
 .hero_image1 {
-    background: url(assets/images/hero-image1.jpg);
+    background: url(../images/hero-image1.jpg);
     @include hero-large();
     @include heroImage();
 }
 
 .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-large();
         @include heroImage();
 }
 
 .hero_image3 {
-        background: url(assets/images/hero-image3.jpg);
+        background: url(../images/hero-image3.jpg);
         @include hero-large();
         @include heroImage();
 }
 
 .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-large();
         @include heroImage();
 }
 
 .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-large();
         @include heroImage();
 }
@@ -487,27 +487,27 @@ footer {
         max-width: 1920px;
     }
     .hero_image1 {
-        background: url(assets/images/hero-image1.jpg);
+        background: url(../images/hero-image1.jpg);
         @include hero-large();
     }
     
     .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-large();
     }
     
     .hero_image3 {
-         background: url(assets/images/hero-image3.jpg);
+         background: url(../images/hero-image3.jpg);
         @include hero-large();
     }
     
     .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-large();
     }
     
     .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-large();
     }
  }
@@ -521,27 +521,27 @@ footer {
     }
      
     .hero_image1 {
-        background: url(assets/images/hero-image1.jpg);
+        background: url(../images/hero-image1.jpg);
         @include hero-large();
 }
 
     .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-large();
     }
 
     .hero_image3 {
-        background: url(assets/images/hero-image3.jpg);
+        background: url(../images/hero-image3.jpg);
         @include hero-large();
     }
 
     .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-large();
     }
 
     .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-large();
     }
 
@@ -559,27 +559,27 @@ footer {
     }
 
     .hero_image1 {
-        background: url(assets/images/hero-image1.jpg);
+        background: url(../images/hero-image1.jpg);
         @include hero-medium();
     }
     
     .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-medium();
     }
     
     .hero_image3 {
-        background: url(assets/images/hero-image3.jpg);
+        background: url(../images/hero-image3.jpg);
         @include hero-medium();
     }
     
     .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-medium();
     }
     
     .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-medium();
     }
  }
@@ -605,27 +605,27 @@ footer {
     }
 
     .hero_image1 {
-        background: url(assets/images/hero-image1.jpg);
+        background: url(../images/hero-image1.jpg);
         @include hero-medium();
     }
     
     .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-medium();
     }
     
     .hero_image3 {
-        background: url(assets/images/hero-image3.jpg);
+        background: url(../images/hero-image3.jpg);
         @include hero-medium();
     }
     
     .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-medium();
     }
     
     .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-medium();
     }
 
@@ -811,27 +811,27 @@ footer {
     }
 
     .hero_image1 {
-        background: url(assets/images/hero-image1.jpg);
+        background: url(../images/hero-image1.jpg);
         @include hero-small();
     }
     
     .hero_image2 {
-        background: url(assets/images/hero-image2.jpg);
+        background: url(../images/hero-image2.jpg);
         @include hero-small();
     }
     
     .hero_image3 {
-        background: url(assets/images/hero-image3.jpg);
+        background: url(../images/hero-image3.jpg);
         @include hero-small();
     }
     
     .hero_image4 {
-        background: url(assets/images/hero-image4.jpg);
+        background: url(../images/hero-image4.jpg);
         @include hero-small();
     }
     
     .hero_image5 {
-        background: url(assets/images/hero-image5.jpg);
+        background: url(../images/hero-image5.jpg);
         @include hero-small();
     }
 
